*) changes suggested by findbugs
git-svn-id: svn://svn.paxle.net/paxle/trunk@2050 f5d3ab42-bacf-4b1a-9692-565be65a0cfe